<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GivePassportFragment"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/green">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/image_back_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="Fuqaro ma'lumotlarini qo'shish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <EditText
        android:id="@+id/edt_man_name"
        android:hint="@string/fuqaroning_ismi"
        android:background="@drawable/edt_fon"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_man_soname"
            android:hint="@string/fuqaroning_familiyasi"
            android:background="@drawable/edt_fon"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_man_o"
            android:hint="@string/otasining_ismi"
            android:background="@drawable/edt_fon"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_viloyat"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:background="@drawable/edt_fon"
            android:entries="@array/viloyat1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_shahar_tuman"
            android:hint="@string/shahar_tuman"
            android:background="@drawable/edt_fon"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_uy_manzili"
            android:hint="@string/uyining_manzili"
            android:background="@drawable/edt_fon"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_passport_olgan_vaqti"
            android:hint="Pasport olgan vaqti"
            android:background="@drawable/edt_fon"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edt_passport_uddati"
            android:hint="@string/pasport_muddati"
            android:background="@drawable/edt_fon"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_jinsi"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:background="@drawable/edt_fon"
            android:entries="@array/jinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/image_add"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_image_add"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuqaroning_rasmi_3x4"
            android:textSize="15sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_save"
            android:text="@string/saqlash"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="100dp"
            android:layout_height="50dp"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>